<resources>
    <string name="app_name">CryptoCash</string>
    <string name="add_new_title">Create country card</string>
    <string name="select_crypto">Crypto currency: </string>
    <string name="select_country">Country currency: </string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="currency_app_id">2d4dbd65d94b4a90b99c1162f4c33005</string>
    <string name="convert">Convert</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About app</string>
    <string name="settings">Internet connection is required to access CryptoCash, go to your phone setting to turn on connection.</string>
</resources>
