<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_color"
        android:padding="@dimen/screen_padding">
        <TextView
            android:id="@+id/add_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:text="@string/add_new_title"
            android:textSize="@dimen/title_size"/>

        <LinearLayout
            android:id="@+id/crypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/add_card_title"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/select_crypto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_tin"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:text="@string/select_crypto"
                android:textSize="@dimen/select_size"/>

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_btc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BTC"
                    android:textSize="@dimen/select_size"
                    android:textColor="@color/black_tin"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    app:buttonTint="@color/colorPrimary" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_eth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ETH"
                    android:textSize="@dimen/select_size"
                    android:textColor="@color/black_tin"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    app:buttonTint="@color/colorPrimary"/>
            </RadioGroup>
        </LinearLayout>


        <TextView
            android:id="@+id/select_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_tin"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/crypto"
            android:text="To"
            android:textSize="@dimen/select_size"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/select_to"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/select_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_tin"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:text="@string/select_country"
                android:textSize="@dimen/select_size"/>

            <Spinner
                android:id="@+id/spin_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="100dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/add_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/select_size"
            android:textAllCaps="false"
            android:layout_below="@+id/country"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:foreground="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/cancel_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/select_size"
            android:textAllCaps="false"
            android:layout_below="@+id/country"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:foreground="?attr/selectableItemBackground"/>

    </RelativeLayout>
</LinearLayout>